--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -1,9 +1,9 @@
 .post {
-  min-height: 60vh;
-  margin: 0 0 40px 0;
+  padding: 0 0 100px 0;
+  margin: 0 0 20px 0;
+  border-bottom: 1px solid $palette-light-grey;
 
   &__header {
-    border-bottom: 1px solid $palette-light-grey;
     text-align: right;
     margin: 0 0 20px 0;
 
