--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -3,6 +3,10 @@
   margin: 0 0 20px 0;
   border-bottom: 1px solid $palette-light-grey;
 
+  &:last-child {
+    margin-bottom: 100vh;
+  }
+
   &__header {
     text-align: right;
     margin: 0 0 20px 0;
